ffi/poc/cpp/corpus/include/ak_abi.h

typedef struct ak_dec_ctx ak_dec_ctx;
/* ABI v1 section 4, decode: an OFFSET into the buffer the host handed in. */
struct ak_span {
  uint32_t off;
  uint32_t len;
  uint32_t coder;
};
typedef struct ak_span ak_span;
/* Decision 11 (WP5 step 7): one message occurrence's unknown-field buffer, host memory the core copies the runs into. */
struct ak_unk_buf {
  void *data;
  uint32_t len;
  uint32_t cap;
};
typedef struct ak_unk_buf ak_unk_buf;
/* Decode group for `TaskOptionsOptionsEntry`. */
struct ak_dfix_TaskOptionsOptionsEntry {
  struct ak_span key;
  struct ak_span value;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `ChunkElementAttrsEntry`. */
struct ak_dfix_ChunkElementAttrsEntry {
  struct ak_span key;
  struct ak_span value;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `SurrogateAttrsEntry`. */
struct ak_dfix_SurrogateAttrsEntry {
  struct ak_span key;
  struct ak_span value;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `Timestamp`. */
struct ak_dfix_Timestamp {
  int64_t seconds;
  int32_t nanos;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Decode group for `WireZoo`. */
struct ak_dfix_WireZoo {
  int32_t v_int32;
  int64_t v_int64;
  uint8_t v_bool;
  double v_double;
  uint32_t v_fixed32;
  struct ak_span v_string;
  struct ak_span v_bytes;
  int32_t v_enum;
  struct ak_dfix_Timestamp v_msg;
  int32_t v_big_tag;
  struct ak_unk_buf unknown;
  uint32_t presence;
};
/* Encode vtable for `WireZoo`. */
struct ak_evt_WireZoo {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `WireZoo` (the push family, ABI v1 section 7.1). */
struct ak_dvt_WireZoo {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_WireZoo *);
};
/* Encode vtable for `TaskOptionsOptionsEntry`. */
struct ak_evt_TaskOptionsOptionsEntry {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `TaskOptionsOptionsEntry` (the push family, ABI v1 section 7.1). */
struct ak_dvt_TaskOptionsOptionsEntry {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_TaskOptionsOptionsEntry *);
};
/* Encode vtable for `ChunkElementAttrsEntry`. */
struct ak_evt_ChunkElementAttrsEntry {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `ChunkElementAttrsEntry` (the push family, ABI v1 section 7.1). */
struct ak_dvt_ChunkElementAttrsEntry {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_ChunkElementAttrsEntry *);
};
/* Encode vtable for `SurrogateAttrsEntry`. */
struct ak_evt_SurrogateAttrsEntry {
  const void *_reserved;  /* an empty struct has no defined size in C */
};
/* Decode vtable for `SurrogateAttrsEntry` (the push family, ABI v1 section 7.1). */
struct ak_dvt_SurrogateAttrsEntry {
  void (*apply)(ak_dec_ctx *, void *, const struct ak_dfix_SurrogateAttrsEntry *);
};