ffi/poc/codec/crates/ak-abi/src/generated_corpus/abi.rs


/// Encode vtable for `WireZoo`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_WireZoo {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `WireZoo` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_WireZoo {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_WireZoo),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
}

/// Encode vtable for `TaskOptionsOptionsEntry`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_TaskOptionsOptionsEntry {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `TaskOptionsOptionsEntry` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_TaskOptionsOptionsEntry {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_TaskOptionsOptionsEntry),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
}

/// Encode vtable for `ChunkElementAttrsEntry`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_ChunkElementAttrsEntry {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `ChunkElementAttrsEntry` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_ChunkElementAttrsEntry {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_ChunkElementAttrsEntry),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
}

/// Encode vtable for `SurrogateAttrsEntry`.
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_evt_SurrogateAttrsEntry {
    /// Reserved: an empty struct has no defined size in C.
    pub _reserved: *const c_void,
}

/// Decode vtable for `SurrogateAttrsEntry` (the push family, ABI v1 section 7.1).
#[repr(C)]
#[derive(Clone, Copy)]
pub struct ak_dvt_SurrogateAttrsEntry {
    pub apply: Option<
        unsafe extern "C" fn(*mut ak_dec_ctx, *mut c_void, *const ak_dfix_SurrogateAttrsEntry),
    >,
    /// Unknown fields of the root: `None` drops them, set captures them.
    pub unknown: Option<ak_unk_f>,
}
